# sql-orchestration

./: .gitignore  Makefile  README.md  agent.py  benchmark.py  claude.md  demo_output.txt  main.py  orchestrator.py  pyproject.toml  reporter.py  roles.py  sandbox_runner.py  server.py
data/: README.md  expected_top10.json  schema.sql  schema_loader.py  seed.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/components/: AgentCard.tsx  MetricsBar.tsx  ProgressBar.tsx  WinnerCard.tsx
frontend/src/: App.tsx  types.ts
frontend/src/components/: AgentCard.tsx  MetricsBar.tsx  ProgressBar.tsx  WinnerCard.tsx
learnings/: phase-1-learnings.md
solutions/: solution_001.py  solution_002.py  solution_003.py  solution_004.py  solution_005.py
tasks/: 01_benchmark.md  02_agent.md  03_sandbox_runner.md  04_orchestrator.md  05_entrypoint.md  06_frontend.md  phase-1-data-layer.md  phase-2-agent-roles.md  phase-3-benchmark-and-safety.md  phase-4-orchestrator.md  phase-5-streaming-metrics-and-demo-polish.md
tests/: test_agent_roles.py  test_benchmark.py  test_orchestrator.py  test_seed.py
tests/fixtures/: mock_results.json
