[project]
name = "sql-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "datetime>=6.0",
    "daytona>=0.151.0",
    "daytona-sdk>=0.151.0",
    "fastapi>=0.115.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
